[package]
name = "cargo-agents"
version = "0.1.0"
edition = "2024"
description = "Cargo subcommand for agentic development workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/cargo-agents"
homepage = "https://github.com/symposium-dev/cargo-agents"
keywords = ["cargo", "agents", "agentic", "development", "ai"]
categories = ["development-tools::cargo-plugins", "development-tools"]
authors = ["Symposium developers"]
readme = "README.md"

[dependencies]
